--- a/SAP Task List Maker/SAP Task List Maker.csproj
+++ b/SAP Task List Maker/SAP Task List Maker.csproj
@@ -54,6 +54,9 @@
     <Compile Update="DataGrid\TasklistColumn.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Update="InputEQ.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
